# zephyr-template-project

./: README.md
.devcontainer/: devcontainer.json
.west/: config
app/: CMakeLists.txt  Kconfig  app.overlay  west.yml
app/src/: main.cpp
app/src/drivers/: CMakeLists.txt
app/src/drivers/led/: CMakeLists.txt  led.cpp  led.hpp
tools/: STM32F401.svd
